<resources>
    <string name="app_name">Clock in</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="neighborhood">Bairro</string>
    <string name="street">Rua</string>
    <string name="number">Número</string>
    <string name="save">Salvar</string>
    <string name="address">Endereço</string>
    <string name="touch_to_relaunch">Clique para abrir.</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="back_to_normal">Back to normal</string>
    <string name="entry">Entrada</string>
    <string name="departure">Saída</string>
    <string name="location">Localização</string>
    <string name="address_mandatory">Você será redirecionado para tela de cadastro de endereço. \n Obrigado!</string>
    <string name="location_permission_mandatory">Para o app funcionar é necessário permissão de localização.</string>
    <string name="OK">OK</string>
    <string name="day">Dia</string>
    <string name="address_not_found">Endereço não encontrado. \n Tente escrever nomes completos. \n Ex: Paraná, Curitiba, Avenida Visconde de Guarapuava</string>
    <string name="error_address_not_save">Erro ao cadastrar endereço, tente novamente</string>
    <string name="reports">Relatórios</string>
    <string name="edit_schedule">Editar Horário</string>
    <string name="year">Ano</string>
    <string name="month">Mês</string>
    <string name="search">Buscar</string>
    <string name="schedules">Horários</string>
    <string name="schedules_email_title">Horários</string>
    <string name="today_point">Ponto de hoje</string>
    <string name="date">Data</string>
    <string name="entryTime">Hora Entrada</string>
    <string name="departureTime">Hora Saida</string>
    <string name="error_geofence">Não foi possível ativar o geofence, salve novamente o endereço</string>
    <string name="entry_company">Entrou na empresa</string>
    <string name="departure_company">Saiu da empresa</string>
    <string name="id_channel">159</string>
    <string name="name_channel">clockinChannel</string>
    <string name="content_description_background">Imagem de fundo do cabeçalho</string>
    <string name="content_description_edit">Imagem de edição do horario</string>
    <string name="internet_warning">É necessário internet para cadastrar o endereço</string>
    <string name="schedule">Horário</string>
    <string name="entries">Entradas</string>
    <string name="departures">Saídas</string>
    <string name="no_results_found">Nenhum registro encontrado</string>
    <string name="content_description_splash">Imagem de fundo da splash screen</string>
    <string name="remove_schedule">Excluir</string>
    <string name="remove_schedule_ask">Tem certeza que deseja excluir?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="one_entry_more_mandatory">É obrigatório ter pelo uma entrada para cada saída</string>
    <string name="one_departure_more_mandatory">É obrigatório ter pelo uma saída para cada entrada</string>
    <string name="internet">Internet</string>
    <string name="orientation_edit_remove_schedule">Para acessar as opções, basta arrastar a linha para o lado esquerdo! :)</string>
    <string name="tutorial_key">TUTORIAL_KEY</string>
</resources>
