<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="scheduleViewModel"
            type="com.thiagoalexb.dev.clockin.ui.schedule.ScheduleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundDefault">

        <ImageView
            android:id="@+id/top_background_image_view"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background"
            tools:srcCompat="@drawable/background" />

        <TextView
            android:id="@+id/current_month_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@{scheduleViewModel.currentMonth}"
            android:textColor="@color/colorDefault"
            android:textSize="@dimen/title"
            app:layout_constraintBottom_toBottomOf="@+id/top_background_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:text="Fevereiro" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedules_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/half_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_month_text_view"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_schedule">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_day_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorDefault"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/report_floating_action_button"
            app:layout_constraintEnd_toEndOf="@+id/actions_floating_action_button"
            app:layout_constraintStart_toStartOf="@+id/actions_floating_action_button"
            app:srcCompat="@drawable/ic_access_time"
            app:tint="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/report_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorDefault"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/addressFloatingActionButton"
            app:layout_constraintEnd_toEndOf="@+id/actions_floating_action_button"
            app:layout_constraintStart_toStartOf="@+id/actions_floating_action_button"
            app:srcCompat="@drawable/ic_print"
            app:tint="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addressFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/colorDefault"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/actions_floating_action_button"
            app:layout_constraintEnd_toEndOf="@+id/actions_floating_action_button"
            app:layout_constraintStart_toStartOf="@+id/actions_floating_action_button"
            app:srcCompat="@drawable/ic_map"
            app:tint="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/actions_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDefault"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/ic_add"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/add_day_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:text="@string/today_point"
            android:textColor="@color/colorDefault"
            app:layout_constraintBottom_toBottomOf="@+id/add_day_floating_action_button"
            app:layout_constraintEnd_toStartOf="@+id/add_day_floating_action_button"
            app:layout_constraintTop_toTopOf="@+id/add_day_floating_action_button" />

        <TextView
            android:id="@+id/report_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:text="@string/reports"
            android:textColor="@color/colorDefault"
            app:layout_constraintBottom_toBottomOf="@+id/report_floating_action_button"
            app:layout_constraintEnd_toStartOf="@+id/report_floating_action_button"
            app:layout_constraintTop_toTopOf="@+id/report_floating_action_button" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:text="@string/address"
            android:textColor="@color/colorDefault"
            app:layout_constraintBottom_toBottomOf="@+id/addressFloatingActionButton"
            app:layout_constraintEnd_toStartOf="@+id/addressFloatingActionButton"
            app:layout_constraintTop_toTopOf="@+id/addressFloatingActionButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>